--- a/menu.html
+++ b/menu.html
@@ -72,14 +72,14 @@
 		<div class="pink">
 			<h2>Menu <small>メニュー</small></h2>
 		</div> <!-- /.pink -->
-	</div> <!-- /.wrapper -->
+	</div> <!-- left/.wrapper -->
 
 
 	<main class="wrapper">
 		<section class="menu wrapper">
-			<!--  copy------------------------------------------>
-			<div class="room-card" id="umeda-10-c">
-				<img src="img/umeda-10-c.jpg" width="600" height="400" alt="梅田教室 10階-C">
+			<div class="room-card" id="">
+				<!-- menu01のイメージ挿入 -->
+				<img src="" width="600" height="400" alt="menu-01">
 				<div class="room-card-detial">
 					<div class="room-card-name">
 				<ul>
@@ -88,26 +88,28 @@
 						<li class="bg-umeda">骨盤矯正</li>
 						<li class="bg-umeda">OX脚矯正</li>
 				</ul>
-				</div>
-			</div>
-					<h4>【口コミ割全身整体+骨盤矯正60分11000⇒3980】<br>不眠・頭痛・首・肩こり・猫背</h4>
-					<div class="room-card-price"><span>60分 &yen;</span>3,980</div>
+				</div><!-- room-card-name -->
+
+				<h4>【口コミ割全身整体+骨盤矯正60分11000⇒3980】<br>不眠・頭痛・首・肩こり・猫背</h4>
+					<div class="room-card-price"><span>60分 &yen;</span>3,980
+					</div><!-- room-card-price -->
+
 					<div>
-						<div><img></div>
-							<p><a>このクーポンの詳細</a></p>
+							<a>このメニューの詳細</a>
 						<ul>
 							<li><strong>提示条件：</strong>予約時＆入店時</li>
 							<li><strong>利用条件：</strong>【初回のみ】口コミ投稿必須</li>
-							<li><strong>有効期限：</strong>2025年05月末日まで</li>
+							<li><strong>有効期限：</strong>2025年7月末日まで</li>
 						</ul>
-					</div>
-					<div class="room-card-btn"><a href="umeda-10-c.html" class="link">詳しくはこちら</a></div>
+					</div><!-- このメニューの詳細 -->
+
+					<div class="room-card-btn"><a href="umeda-10-c.html" class="link">詳しくはこちら</a></div><!-- room-card-btn -->
+
 				</div><!-- /.room-card-detial -->
 			</div><!-- /.room-card -->
-		</section>
-<!--  copy------------------------------------------>
+		</section><!-- menu wrapper -->
 
-	</main>
+	</main><!-- wrapper -->
 
 	<footer>
 		<div class="page-footer wrapper">
