--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 		<div class="top-hero-text">
 			<div class="fade-bottom fade fade-active">
 				<h1 class="top-hero-title">
-					<span>「Gentle Body Care」</span>
+					<span>その辛さ、"いつものこと"で終わらせない。</span>
 				</h1>
-				<p class="top-hero-comment">むくみ・コリなど女性特有のお悩みもお任せください。<br>リラックスしながら、プロの本格美脚・小顔・小顔矯正</p>
+				<p class="top-hero-comment"><strong>あなたのための本当の"ベネフィット"を考えたケアを。<br>リラックスしながら、プロの本格美脚・小顔・小顔矯正。</strong></p>
 			</div><!--  fade-bottom fade fade-active-->
 		</div><!--  top-hero-text-->
 	</div> <!-- m-visual img-box wrapper -->
@@ -103,7 +103,7 @@
 	<div class="syokai wrapper">
 
 		<h2>初回キャンペーン価格</h2>
-		<span> 初めての方限定！！インターネット特別割引
+		<span> 初めての方限定！！<strong>インターネット特別割引</strong>
 茨木市の多くの方に当院の施術をお試しいただきたいという思いから、
 ご予約時に「ＨＰを見た」とお伝え頂きますと、
 8,000円⇒3,980円 （税込）</span>
@@ -123,29 +123,26 @@
 		<br>
 		即、実感できる整体で、期待以上の変化＆感動を楽しんでみませんか？
 		<div class="">
-			<p class=""><br>茨木ベネフィー整体院の小林玉恵です。<br><br>
+			<p class=""><br><strong>茨木ベネフィー整体院</strong>の<strong>小林玉恵</strong>です。<br><br>
 
-				数あるホームページの中から、当院を選んでいただき、ありがとうございます。<br>
+				<strong>数あるホームページの中から、当院を選んでいただき、ありがとうございます。<br></strong>
 				<br>
-				私は、某銀行員から社会人をスタートさせ、様々な会社の経理関係に携わるデスクワーカーでした。<br>
-				また、同時に子育てや家族の介護、学校、地域の役員等にも関わり、楽しくも多忙でありました。<br>
-				が、ついに疲労の為か原因不明の激痛に身体が動かせない事態になり、大変辛い経験をしました。<br>
-				何より家族や同僚に、心配をかけた事を、とても「心苦しかった」と覚えています。<br>
+				私は某銀行員から社会人をスタートさせ、様々な会社の経理関係に携わる<strong>デスクワーカー</strong>でした。<br>
+				また、同時に子育てや家族の介護、学校、地域の役員等にも関わり楽しくも多忙でありました。<br>
+				しかし、ついに疲労の為か<strong>原因不明の激痛に身体が動かせない事態</strong>になり、大変辛い経験をしました。<br>
+				何より家族や同僚に心配をかけた事を、とても<strong>心苦しかった</strong>と覚えています。<br>
 				<br>
-				その当時の治療といえば、電気をあてたりシップを出されたりして、少しよくなってくると、マッサージをするといったもので、これではなかなか良くなりませんでした。
-				<br><br>
-				現在でも、ほとんどの所が、これに+αしたような施術内容です。<br>
-				腰が痛いからといって、原因は本当に腰なのか<br>
-				ひざが痛いからといって、原因は本当にひざなのか<br>
-				こういった疑問をいだいたことから、色々な勉強をし、最高・最強の施術方法ができあがりました。<br>
+				腰が痛いからといって、原因は本当に腰なのか？<br>
+				ひざが痛いからといって、原因は本当にひざなのか？<br>
+				こういった疑問をいだいたことから、色々な勉強をし、<strong>最高・最強の施術方法</strong>ができあがりました。<br>
 				<br>
-				「苦しんでいる方に寄り添い、助け、回復の喜びを分かち合う」治療家としての志を大切に、<br>
+				<strong>「苦しんでいる方に寄り添い、助け、回復の喜びを分かち合う」</strong>治療家としての志を大切に、<br>
 				国内外の方をはじめ当院に来られた方、そのご家族やご友人の方まで笑顔にできるように全力で施術をさせていただきます。<br>
 				<br>
-				茨木ベネフィー整体院は、肩こり、腰痛等の慢性症状はもちろん、女性に特化した施術とお一人、お一人のベネフィットを汲取ることで、「根本改善」を柱とし地域の皆様に安心して通っていただけています。
-				<br><br>
-				完全入替え制、毎回のアルコール消毒、清掃を徹底、<br>
-				プライバシーにも配慮し、貸切個室、完全予約制です。<br>
+				茨木ベネフィー整体院は、肩こり、腰痛等の慢性症状はもちろん、女性に特化した施術とお一人、お一人のベネフィットを汲取ることで、<strong>「根本改善」</strong>を柱とし地域の皆様に安心して通っていただけています。
+				<br><br><strong></strong>
+				<strong>完全入替え制、毎回のアルコール消毒、清掃を徹底、<br>
+					プライバシーにも配慮し、貸切個室、完全予約制です。</strong><br>
 				お子様と同室にて安心して施術を受けることもできます。<br>
 				<br>
 				今後も、茨木ベネフィー整体院は、より良い生活をおくっていただけるお手伝いをします。<br>
