--- a/menu.html
+++ b/menu.html
@@ -79,7 +79,7 @@
 		<section class="menu wrapper">
 			<div class="room-card" id="">
 				<!-- menu01のイメージ挿入 -->
-				<img src="" width="600" height="400" alt="menu-01">
+				<img src="img/menu01.jpg" width="1038" height="809" alt="menu-01">
 				<div class="room-card-detial">
 					<div class="room-card-name">
 				<ul>
