--- a/menu.html
+++ b/menu.html
@@ -94,7 +94,7 @@
 					<div class="room-card-price"><span>60分 &yen;</span>3,980
 					</div><!-- room-card-price -->
 
-					<div>
+					<div class="syousai">
 							<a>このメニューの詳細</a>
 						<ul>
 							<li><strong>提示条件：</strong>予約時＆入店時</li>
