--- a/menu.html
+++ b/menu.html
@@ -66,7 +66,7 @@
 
 
 
-	<!--menu------------------------------- -->
+	<!--menu01----------------------------------------------------------------------------------------------------------------- -->
 
 	<div class="left wrapper">
 		<div class="pink">
@@ -77,8 +77,7 @@
 
 	<main class="wrapper">
 		<section class="menu wrapper">
-			<div class="room-card" id="">
-				<!-- menu01のイメージ挿入 -->
+			<div class="room-card" id="01">
 				<img src="img/menu01.jpg" width="1038" height="809" alt="menu-01">
 				<div class="room-card-detial">
 					<div class="room-card-name">
@@ -92,6 +91,40 @@
 
 				<h4>【口コミ割全身整体+骨盤矯正60分11000⇒3980】<br>不眠・頭痛・首・肩こり・猫背</h4>
 					<div class="room-card-price"><span>60分 &yen;</span>3,980
+					</div><!-- room-card-price -->
+
+					<div class="syousai">
+							<a>このメニューの詳細</a>
+						<ul>
+							<li><strong>提示条件：</strong>予約時＆入店時</li>
+							<li><strong>利用条件：</strong>【初回のみ】口コミ投稿必須</li>
+							<li><strong>有効期限：</strong>2025年7月末日まで</li>
+						</ul>
+					</div><!-- このメニューの詳細 -->
+
+					<div class="room-card-btn"><a href="umeda-10-c.html" class="link">詳しくはこちら</a></div><!-- room-card-btn -->
+
+				</div><!-- /.room-card-detial -->
+			</div><!-- /.room-card -->
+
+				<!--menu02----------------------------------------------------------------------------------------------------------------- -->
+
+			<div class="room-card" id="02">
+				<img src="img/menu02.jpg" width="1038" height="809" alt="menu-02">
+				<div class="room-card-detial">
+					<div class="room-card-name">
+				<ul>
+						<li class="bg-umeda">ボディケア</li>
+						<li class="bg-umeda">整体</li>
+						<li class="bg-umeda">カイロ</li>
+						<li class="bg-umeda">骨盤矯正</li>
+						<li class="bg-umeda">OX脚矯正</li>
+						<li class="bg-umeda">小顔矯正</li>
+				</ul>
+				</div><!-- room-card-name -->
+
+				<h4>人気No.1【できる女子が選ぶ】<br>小顔+肩こり+骨盤+全リンパ整体80分22000⇒7980</h4>
+					<div class="room-card-price"><span>80分 &yen;</span>7,980
 					</div><!-- room-card-price -->
 
 					<div class="syousai">
