--- a/index.html
+++ b/index.html
@@ -60,29 +60,32 @@
 						<li class="list-item"><a href="access.html">
 								<span class="en">Access</span>
 								<span class="jp">アクセス</span></a></li>
-						<li><button type="button" onclick="location.href='https://beauty.hotpepper.jp/kr/slnH000413779/'" class="link">予約</button></li>
+						<li><button type="button" onclick="location.href='https://beauty.hotpepper.jp/kr/slnH000413779/coupon/'" class="link">予約</button></li>
 					</ul>
 				</nav>
 			</div><!-- c-g-nav--------------- -->
 		</div><!-- container--------------- -->
 	</header>
 
-	<button type="button" class="hamburger" aria-label="メニューを開きます"><i class="fa-solid fa-bars"></i></button>
+	<!-- <button type="button" class="hamburger" aria-label="メニューを開きます"><i class="fa-solid fa-bars"></i></button> -->
 
-	 <!-- main-visual--------------------------------------------- -->
+	 <!-- main-visual end--------------------------------------------- -->
 
 	<div class="m-visual img-box wrapper">
 		<div class="top-hero-image">
 			
-			<img class="key-visual-p" src="img/kv-p.jpg" width="2004" height="1127" alt="Benefy整体院kv-p">
+			<img class="key-visual-p" src="img/kv-hanten.JPG" width="2004" height="1127" alt="Benefy整体院kv-p">
+			<img class="key-visual-s" src="img/kv-1.jpg" width="1000" height="562" alt="Benefy整体院kv-s">
 		</div><!-- top-hero-image -->
 
-		<div class="top-hero-text">
+		<div class="top-hero-text wrapper">
 			<div class="fade-bottom fade fade-active">
 				<h1 class="top-hero-title">
-					<span>その辛さ、"いつものこと"で終わらせない。</span>
+					<span>そのつらさ、<br>"いつものこと"で終わらせない。</span>
 				</h1>
-				<p class="top-hero-comment"><strong>あなたのための本当の"ベネフィット"を考えたケアを。<br>リラックスしながら、プロの本格美脚・小顔・小顔矯正。</strong></p>
+				<p class="top-hero-comment-1"><strong>あなたのための本当の"ベネフィット"を考えたケアを。</strong></p>
+				<p class="top-hero-comment-2">
+					<strong>リラックスしながら、プロの本格美脚・小顔・小顔矯正。</strong></p>
 			</div><!--  fade-bottom fade fade-active-->
 		</div><!--  top-hero-text-->
 	</div> <!-- m-visual img-box wrapper -->
@@ -101,14 +104,19 @@
 	</div>  -->
 
 	<div class="syokai wrapper">
+		<h2 class="underline">初回キャンペーン価格</h2>
+		<span> 
+			<strong>【インターネット特別割引】</strong><br>
+			<p class="s-none">茨木市の多くの方に当院の施術をお試しいただきたいという思いから、</p>
+			<p>ご予約時に「ＨＰを見た」とお伝え頂きますと、
+8,000円⇒3,980円 （税込）</p>
+		</span><!-- none -->
 
-		<h2>初回キャンペーン価格</h2>
-		<span> 初めての方限定！！<strong>インターネット特別割引</strong>
-茨木市の多くの方に当院の施術をお試しいただきたいという思いから、
+		<!-- <span class="max860"> <strong>インターネット特別割引</strong>
 ご予約時に「ＨＰを見た」とお伝え頂きますと、
-8,000円⇒3,980円 （税込）</span>
+8,000円⇒3,980円 （税込）</span><br> -->
 		<button type="button" onclick="location.href='https://beauty.hotpepper.jp/kr/slnH000413779/'" class="link">ご予約はこちらから</button>
-	</div>
+	</div>	<!-- syokai wrapper -->
 	<div class="top-concept-text wrapper">
 
 		<div class="left wrapper">
