--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 <!-- style.css -->
 <link rel="stylesheet" href="css/style.css">
 <!-- favicon -->
+ <!-- Clarity ヒートマップ追跡-->
+ <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "sncydykf8h");
+</script>
 
 
 <body>
