--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "sncydykf8h");
 </script>
-
+</head> 
 
 <body>
 	<!-- <div class="notice for-pc"><a href="news.html"><small>年末年始の休業について</small></a></div> -->
