--- a/index.html
+++ b/index.html
@@ -2,11 +2,55 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<meta name="robots" content="noindex">
+<meta name="robots" content="index, follow">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>ベネフィー整体サロン | 女性専用の癒し空間</title>
 <meta name="description" content="ベネフィー整体サロンは、茨木市駅から徒歩5分の女性専用整体院です。骨盤矯正や小顔矯正、エイジングケアで心も体もリフレッシュしませんか？">
 <meta name="keywords" content="カイロ,クリニック,整体,エステ,骨盤矯正,小顔矯正,肩こり,腰痛,女性専用,リラクゼーション,サロン,エイジングケア,子育て,出産,産後,疲れ,デスクワーク,ストレートネック,運動不足運動不足">
+<!-- ▼ OGP（Open Graph Protocol） ▼ -->
+<meta property="og:title" content="ベネフィー整体サロン | 女性専用の癒し空間" />
+<meta property="og:description" content="茨木市駅から徒歩5分の女性専用整体サロン。骨盤矯正や小顔矯正で心と体をリフレッシュしませんか？" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://arokaro1115.github.io/bene-seitai/" />
+<meta property="og:image" content="https://arokaro1115.github.io/bene-seitai/images/ogp.jpg" />
+<meta property="og:site_name" content="ベネフィー整体サロン" />
+
+<!-- ▼ Twitterカード（Twitterでの見え方）▼ -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="ベネフィー整体サロン | 女性専用の癒し空間" />
+<meta name="twitter:description" content="茨木市駅から徒歩5分の女性専用整体サロン。骨盤矯正や小顔矯正で心と体をリフレッシュしませんか？" />
+<meta name="twitter:image" content="https://arokaro1115.github.io/bene-seitai/images/ogp.jpg" />
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "ベネフィー整体サロン",
+  "image": "https://arokaro1115.github.io/bene-seitai/images/ogp.jpg",
+  "@id": "https://arokaro1115.github.io/bene-seitai/",
+  "url": "https://arokaro1115.github.io/bene-seitai/",
+  "telephone": "072-636-0280", 
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "茨木市園田町1-7 FORUM'87 101", 
+    "addressLocality": "茨木市",
+    "addressRegion": "大阪府",
+    "postalCode": "567-0825", 
+    "addressCountry": "JP"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 34.8146, 
+    "longitude": 135.5799 
+  },
+  "openingHours": "Mo-Sa 8:00-21:00", 
+  "priceRange": "¥¥",
+  "description": "ベネフィー整体サロンは、茨木市駅から徒歩5分の女性専用整体サロンです。骨盤矯正や小顔矯正、エイジングケアで心も体もリフレッシュしませんか？",
+  "sameAs": [
+    "https://www.instagram.com/benefy_seitaiin15/" 
+
+  ]
+}
+</script>
 <!-- ress.css -->
 <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
 <!-- Google Fonts -->
